gatekeeper/privileged-container/constraint/testdata/allowed-ignore-cronjob.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: allowed-ignore-cronjob
  namespace: restricted-namespace
  labels:
    deny-privileged-container.gatekeeper.gatekeeper-policies-playground.dev/ignore: "true"
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
            - name: denied-container
              image: nginx:latest
              command:
                - /bin/foo
              securityContext:
                privileged: true
