gatekeeper/privileged-container/constraint/testdata/allowed-ignore-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-ignore-pod
  namespace: restricted-namespace
  labels:
    deny-privileged-container.gatekeeper.gatekeeper-policies-playground.dev/ignore: "true"
spec:
  containers:
    - name: denied-container
      image: nginx:latest
      securityContext:
        privileged: true
