gatekeeper/privileged-container/template/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  creationTimestamp: null
  name: privilegedcontainer
spec:
  crd:
    spec:
      names:
        kind: PrivilegedContainer
      validation:
        openAPIV3Schema:
          properties:
            ignoreContainersAnnotationKey:
              type: string
            ignoreContainersName:
              items:
                type: string
              type: array
  targets:
    - libs:
        - |-
          package lib.core

          default is_gatekeeper = false

          is_gatekeeper {
              has_field(input, "review")
              has_field(input.review, "object")
          }

          resource = input.review.object {
              is_gatekeeper
          }

          resource = input {
              not is_gatekeeper
          }

          format(msg) = {"msg": msg}

          format_with_id(msg, id) = msg_fmt {
              msg_fmt := {
                  "msg": sprintf("%s: %s", [id, msg]),
                  "details": {"policyID": id},
              }
          }

          apiVersion = resource.apiVersion

          name = resource.metadata.name

          kind = resource.kind

          labels = resource.metadata.labels

          annotations = resource.metadata.annotations

          gv := split(apiVersion, "/")

          group = gv[0] {
              contains(apiVersion, "/")
          }

          group = "core" {
              not contains(apiVersion, "/")
          }

          version := gv[count(gv) - 1]

          has_field(obj, field) {
              not object.get(obj, field, "N_DEFINED") == "N_DEFINED"
          }

          missing_field(obj, field) {
              obj[field] == ""
          }

          missing_field(obj, field) {
              not has_field(obj, field)
          }
        - |-
          package lib.pods

          import data.lib.core

          default pod = false

          pod = core.resource.spec.template {
              pod_templates := ["daemonset", "deployment", "job", "replicaset", "replicationcontroller", "statefulset"]
              lower(core.kind) == pod_templates[_]
          }

          pod = core.resource {
              lower(core.kind) == "pod"
          }

          pod = core.resource.spec.jobTemplate.spec.template {
              lower(core.kind) == "cronjob"
          }

          containers[container] {
              keys = {"containers", "initContainers"}
              all_containers = [c | keys[k]; c = pod.spec[k][_]]
              container = all_containers[_]
          }

          volumes[volume] {
              volume = pod.spec.volumes[_]
          }
        - |-
          package lib.ignore

          import data.lib.core
          import data.lib.pods
          import future.keywords.in

          default default_ignore_annotation_key = "gatekeeper.gatekeeper-policies-playground.dev/ignore-containers"

          is_ignore_container(container, parameters) {
              ignore_containers := { trim(ic, " ") |
                  ic := split(trim(object.get(pods.pod.metadata.annotations, default_ignore_annotation_key, ""), " "), ",")[_]
              }
              ignore_containers[_] == container.name
          }

          is_ignore_container(container, parameters) {
              core.has_field(parameters, "ignoreContainersAnnotationKey")
              ignore_annotation_key = parameters["ignoreContainersAnnotationKey"]
              ignore_containers := { trim(ic, " ") |
                  ic := split(trim(object.get(pods.pod.metadata.annotations, ignore_annotation_key, ""), " "), ",")[_]
              }
              ignore_containers[_] == container.name
          }

          is_ignore_container(container, parameters) {
              core.has_field(parameters, "ignoreContainersName")
              ignore_containers := parameters["ignoreContainersName"]
              ignore_containers[_] == container.name
          }
      rego: |-
        package privileged_container

        import data.lib.core
        import data.lib.pods
        import data.lib.ignore

        policyID := "privileged-container"

        violation[msg] {
            c := pods.containers[_]
            container_is_privileged(c)
            not ignore.is_ignore_container(c, input.parameters)

            msg = core.format_with_id(
                sprintf("apiVersion: %v, kind: %v, name: %v, container: %v; container runs as privileged", [
                    core.apiVersion, core.kind, core.name, c.name
                ]),
                policyID
            )
        }

        container_is_privileged(c) {
            c.securityContext.privileged
        }
      target: admission.k8s.gatekeeper.sh
status: {}
